# flexsea_demos

./: README.md  pyproject.toml
flexsea_demos/: app.py  device.py  main.py  utils.py
flexsea_demos/commands/: bootloader.py  current_control.py  find_poles.py  get_version.py  high_speed.py  high_stress.py  impedance_control.py  leader_follower.py  open_control.py  position_control.py  read_only.py  two_dev_pos_control.py  two_devices_position_control.py  two_position_control.py
param_files/: bootloader_params.yaml  current_control_params.yaml  get_version_params.yaml  high_speed_params.yaml  high_stress_params.yaml  impedance_control_params.yaml  leader_follower_params.yaml  open_control_params.yaml  position_control_params.yaml  read_only_params.yaml  two_devices_position_control_params.yaml  two_position_control_params.yaml
tests/: test_flexsea_demos.py
